# piper_bot_ws

./: .gitignore  can_activate.sh  clicked_points.csv  frames_2025-12-31_11.34.41.gv  frames_2025-12-31_11.54.00.gv  frames_2025-12-31_12.34.14.gv  frames_2025-12-31_13.11.11.gv  frames_2025-12-31_13.23.16.gv  frames_2025-12-31_13.27.15.gv  frames_2025-12-31_13.27.47.gv  frames_2025-12-31_14.30.52.gv  frames_2025-12-31_15.57.32.gv  frames_2026-01-12_11.04.50.gv  frames_2026-01-19_12.03.17.gv  frames_2026-01-19_12.03.55.gv  frames_2026-01-22_16.52.21.gv  frames_2026-01-22_17.09.34.gv  requirements.txt  segmented_object_points.npy  view_npy.py
captured_masks/: cloud_56_1_1767251150.npy  cloud_62_2_1767250943.npy
gazebo_models/ar_tags/scripts/: generate_markers_model.py
ros_cv_integration/: camera_feed.py  generate_marker.py  move_to_aruco copy.py  move_to_aruco.py  rgb_and_depth.py  test1.py  test1_yolo.py  test_aruco.py  test_depth.py  trajectories.py  zed_cv.py
src/piper/launch/: start_single_piper.launch.py  start_single_piper_rviz.launch.py
src/piper_description/: CMakeLists.txt
src/piper_description/meshes/: L_motor_Link.STL  R_motor_Link.STL  ZED.STL  wheel.stl  wheel_l.stl  wheel_r.stl
src/piper_description/rviz/: piper_ctrl.rviz
src/piper_description/urdf/: piper_description copy.xacro  piper_description_gazebo.xacro  rover.xacro  rover_arm_description.urdf.xacro
src/piper_sim/piper_gazebo/: CMakeLists.txt
src/piper_tool/: CMakeLists.txt  package.xml
src/piper_tool/piper_tool/: motor_serial_node.py
src/pybind_test_pkg/: CMakeLists.txt  package.xml
src/pybind_test_pkg/src/: pybind_test_node.cpp
src/pymoveit2/: CMakeLists.txt
src/pymoveit2/examples/: cleaning_sequence_moveit.py  ex_pick_and_place.py  pick_and_place.py  (+15 more)
src/zed_ros_integration/: CMakeLists.txt  package.xml
(+29 files in other folders)
